school-app-181210/force-app/main/default/objects/Assessment__c/fields/AssessmentRestrictions__c.field-meta.xml
<CustomField>
    <fullName>AssessmentRestrictions__c</fullName>
    <label>Assessment Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Home</fullName>
            </value>
            <value>
                <fullName>In Class</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Open Book</fullName>
            </value>
            <value>
                <fullName>Open Note</fullName>
            </value>
            <value>
                <fullName>Closed Book</fullName>
            </value>
            <value>
                <fullName>Closed Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>