school-app-181210/force-app/main/default/objects/Assessment__c/fields/AverageScore__c.field-meta.xml
<CustomField>
    <fullName>AverageScore__c</fullName>
    <formula>Sum_Of_Grades__c  /  NumberGraded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>