school-app-181210/force-app/main/default/objects/Assessment__c/fields/NumberGraded__c.field-meta.xml
<CustomField>
    <fullName>NumberGraded__c</fullName>
    <label>Number Graded</label>
    <summaryFilterItems>
        <field>Grade__c.Needs_Grading__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>