school-app-181210/force-app/main/default/objects/Assessment__c/fields/NumberofMissingGrades__c.field-meta.xml
<CustomField>
    <fullName>NumberofMissingGrades__c</fullName>
    <description>Displays the number of assessments of this type that need to be graded. It is calculated based on the number of students in the class and the number of graded grade records for this assessment.</description>
    <formula>Class__r.ClassSize__c -  NumberGraded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Missing Grades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>