school-app-181210/force-app/main/default/objects/Assessment__c/fields/NumberUngraded__c.field-meta.xml
<CustomField>
    <fullName>NumberUngraded__c</fullName>
    <label>Number Ungraded</label>
    <summaryFilterItems>
        <field>Grade__c.Needs_Grading__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>