school-app-181210/force-app/main/default/objects/Assessment__c/fields/PeoplePerGroup__c.field-meta.xml
<CustomField>
    <fullName>PeoplePerGroup__c</fullName>
    <description>Number of people in each group for group assessments.</description>
    <label>People Per Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>