school-app-181210/force-app/main/default/objects/Assessment__c/fields/Sum_Of_Grades__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Grades__c</fullName>
    <label>Sum Of Grades</label>
    <summarizedField>Grade__c.Grade__c</summarizedField>
    <summaryFilterItems>
        <field>Grade__c.Needs_Grading__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>