school-app-181210/force-app/main/default/objects/Assessment__c/recordTypes/Homework.recordType-meta.xml
<RecordType>
    <fullName>Homework</fullName>
    <active>true</active>
    <label>Homework</label>
</RecordType>