school-app-181210/force-app/main/default/objects/Assessment__c/validationRules/MaxGroupSize.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxGroupSize</fullName>
    <active>true</active>
    <errorConditionFormula>PeoplePerGroup__c  &gt; 10</errorConditionFormula>
    <errorMessage>Groups cannot be larger than 10 people.</errorMessage>
</ValidationRule>